# nifty-theta-engine

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  WHEEL_STRATEGY_MANUAL.md  backtest.py  dashboard.py  deploy.bat  deploy.ps1  deploy.sh  docker-compose.yml  init_nifty_schema.sql  main.py  pyproject.toml
.github/workflows/: auto-merge.yml
config/: settings.py  token.json
core/: auth.py  client.py  notifier.py  scheduler.py  smart_money.py
data/: nifty50_historical.parquet
ml/: vix_pipeline.py
ml_service/: vix_inference_worker.py
models/: xgb_vix_regime_v1.pkl
scripts/: migrate_db.py
strategies/: trend_strategy.py  wheel_strategy.py
tools/: download_data.py  optimize_strategy.py
